# stats-data-demo

./: .gitignore  README.md  azure.yaml  package-lock.json
data/: README.md  baseball_databank.json  baseball_databank_upload.py
data/baseball_databank/: test_Batting.csv  test_Master.csv
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
infra/app/: aca-env.bicep  app.bicep  container-app.bicep  eventhubs-Access.bicep  ollama-app.bicep  openai-Access.bicep  openai.bicep  postgreSQL-privateDnsZone.bicep  servicebus-Access.bicep  servicebus-privateEndpoint.bicep  storage-PrivateEndpoint.bicep  vnet.bicep
infra/core/host/: functions-flexconsumption.bicep
infra/core/loadtesting/: loadtesting.bicep  testprofile-mapping.bicep
infra/core/message/: servicebus.bicep
infra/tmp/: README.md  afd.bicep  container-app.bicep  main.bicep  ollama-app.bicep  session-pool-role-assignment.bicep
scripts/: postdeploy.ps1  postdeploy.sh
src/app_baseball_agent/: Dockerfile  README.md  baseball_agent.py  helper_tools.py  pyproject.toml  sample.dotenv
src/app_text2sql/: Dockerfile  README.md  pyproject.toml  simple_text2sql.py
src/app_ux/backend/: AssistantSkills.cs  backend.csproj  chat.cs
src/app_ux/scripts/: deploy.ps1  deploy.sh
src/function_orchestrate_ingest/: .gitignore  README.txt  function_app.py  host.json  requirements.txt
src/function_upload_data/: README.txt  function_app.py  real-time-upload.py  requirements.txt  upload_data.py
src/function_upload_data/scripts/: postdeploy.ps1  postdeploy.sh
(+5 files in other folders)
